--- a/mysite/templates/pagos/saldo_consulta.html
+++ b/mysite/templates/pagos/saldo_consulta.html
@@ -52,56 +52,91 @@
     <script src="https://cdn.datatables.net/buttons/1.7.0/js/buttons.html5.min.js"></script> -->
     <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script> -->
+    <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
     {% endblock scripts %}
 </head>
 
 {% block content %}
 {% csrf_token %}
-<!-- <a href="http://127.0.0.1:8000/pagos/pagos_excel.xls" download>Descargar</a> -->
-<div class="container">
-    <div class="row justify-content-center">
-        <div  class="col">
-            <label for="user_code">Codigo de Usuario:</label>
-            <input type="search" id="user_code">
+<div style="margin-top: 20px;">
+    <!-- <a href="http://127.0.0.1:8000/pagos/pagos_excel.xls" download>Descargar</a> -->
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col">
+                <label for="dt1">Fecha de inicio:</label>
+                <input type="text" id="dt1"></input>
+            </div>
+            <div  class="col">
+                <label for="dt2">Fecha final:</label>
+                <input type="text" id="dt2"></input>
+            </div>
+            <div  class="col">
+                <label for="user_code">Codigo de Usuario:</label>
+                <input type="text" id="user_code">
+            </div>
         </div>
+        <table id="data_table" class="table table-striped table-bordered table-hover" style="width:100%;">
+            <thead>
+                <tr>
+                    <th>Descripcion de Estudiante</th>
+                    <th>Tipo de pago</th>
+                    <th>Codigo de Estudiante</th>
+                    <th>Codigo de Curso</th>
+                    <th>Descripcion de pago</th>
+                    <th>Fecha Pago</th>
+                    <th>Monto (Q)</th>
+                </tr>
+            </thead>
+        </table>
     </div>
-    <table id="data_table" class="table table-striped table-bordered table-hover" style="width:100%;">
-        <thead>
-            <tr>
-                <th>Descripcion de Estudiante</th>
-                <th>Tipo de pago</th>
-                <th>Codigo de Estudiante</th>
-                <th>Codigo de Curso</th>
-                <th>Descripcion de pago</th>
-                <th>Fecha Pago</th>
-                <th>Monto (Q)</th>
-            </tr>
-        </thead>
-        <tfoot>
-            <tr>
-                <th>Descripcion de Estudiante</th>
-                <th>Tipo de pago</th>
-                <th>Codigo de Estudiante</th>
-                <th>Codigo de Curso</th>
-                <th>Descripcion de pago</th>
-                <th>Fecha Pago</th>
-                <th>Monto (Q)</th>
-            </tr>
-        </tfoot>
-    </table>
 </div>
 <script type="text/javascript">
+
+    // FILTRO DE RANGO DE FECHAS - SE LLAMA CADA VEZ QUE UNO DE LOS DOS DATEPICKERS CAMBIE
+    minDateFilter = "";
+    maxDateFilter = "";
+
+    $.fn.dataTableExt.afnFiltering.push(
+        (settings, data, dataIndex) => {
+            let mydate
+            if (typeof data._date == 'undefined') {
+
+                var parts = data[5].split('/')
+                mydate = new Date(parts[2], parts[1] - 1, parts[0]);
+            }
+
+            if (minDateFilter && !isNaN(minDateFilter)) {
+                if (mydate < minDateFilter) {
+                    return false;
+                }
+            }
+
+            if (maxDateFilter && !isNaN(maxDateFilter)) {
+                if (mydate > maxDateFilter) {
+                    return false;
+                }
+            }
+
+            return true;
+        }
+    )
+
+
+    // FILTRO DE CODIGO DE USUARIO - SE LLAMA CADA VEZ QUE CAMBIE EL INPUT
     $.fn.dataTable.ext.search.push(
         ( settings, data, dataIndex ) => {
             const code = $('#user_code').val()
             const codeColumn = data[2]
-            if ( code == codeColumn || code === '')
+            if ( codeColumn.includes(code) || code === '')
             {
                 return true
             }
             return false
         }
     )
+
+
     $(document).ready(() => {
         let table = $('#data_table').DataTable({
             ajax: {
@@ -115,7 +150,7 @@
                     },
                     dataSrc: 'data'
                 },
-                dom: 'Bfrtip',
+                "sDom":"ltipr",
                 buttons: ['csv', 'excel', 'pdf'],
                 scrollY: '70vh',
                 scrollCollapse: true,
@@ -153,9 +188,67 @@
                     { targets: [0, 1, 2, 3], visible: false },
                 ]
         })
+
+
+        // FORMATO DE DATEPICKER 1
+
+        $("#dt1").datepicker({
+            dateFormat: "dd/mm/yy",
+            // minDate: 0,
+            onSelect: function (date) {
+                var dt2 = $('#dt2');
+                var startDate = $(this).datepicker('getDate');
+                //add 30 days to selected date
+                startDate.setDate(startDate.getDate() + 30);
+                var minDate = $(this).datepicker('getDate');
+                var dt2Date = dt2.datepicker('getDate');
+                //difference in days. 86400 seconds in day, 1000 ms in second
+                var dateDiff = (dt2Date - minDate)/(86400 * 1000);
+
+                //dt2 not set or dt1 date is greater than dt2 date
+                if (dt2Date == null || dateDiff < 0) {
+                        dt2.datepicker('setDate', minDate);
+                }
+                //dt1 date is 30 days under dt2 date
+                else if (dateDiff > 30){
+                        dt2.datepicker('setDate', startDate);
+                }
+                //sets dt2 maxDate to the last day of 30 days window
+                // dt2.datepicker('option', 'maxDate', startDate);
+                dt2.datepicker('option', 'minDate', minDate);
+
+                minDateFilter = $(this).datepicker('getDate');
+                table.draw();
+            }
+        }).keyup(function() {
+            minDateFilter = $(this).datepicker('getDate');
+            table.draw();
+        });
+
+        // FORMATO DE DATEPICKER 2
+        
+        $('#dt2').datepicker({
+            dateFormat: "dd/mm/yy",
+            onSelect: function(date){
+                maxDateFilter = $(this).datepicker('getDate');
+                table.draw();
+            }
+        }).keyup(function() {
+            maxDateFilter = $(this).datepicker('getDate');
+            table.draw();
+        });
+
+
+        // FUNCIONES QUE REPINTAN LA TABLA CADA VEZ QUE LOS FILTROS CAMBIAN
+
+        $('#dt1, #dt2').change( () => {
+            table.draw();
+        })
         $('#user_code').keyup( () => {
             table.draw();
         })
+
+
     })
 </script>
 {% endblock content %}
