--- a/mysite/static/base/styles.css
+++ b/mysite/static/base/styles.css
@@ -65,3 +65,159 @@
 .dropdown:hover .dropbtn {
   background-color: darkgray;
 }
+.dtrg-group.dtrg-start.dtrg-level-0 td{
+    background-color: DodgerBlue;
+    color: white;
+}
+tr.dtrg-group.dtrg-start.dtrg-level-1 td {
+    padding-left: 1.5em;
+}
+tr.odd td:first-child,
+tr.even td:first-child {
+    padding-left: 4em;
+}
+td.sub, tr.subCabecera td {
+    padding-left: 1.5em;
+}
+/* Style buttons */
+.btn-solicitar-eliminacion {
+  background-color: DodgerBlue; /* Blue background */
+  border: none; /* Remove borders */
+  color: white; /* White text */
+  padding: 8px 10px; /* Some padding */
+  font-size: 14px; /* Set a font size */
+  cursor: pointer; /* Mouse pointer on hover */  
+}
+
+  /* Darker background on mouse-over */
+.btn-solicitar-eliminacion:hover {
+  background-color: RoyalBlue;
+}
+.modal-confirm {		
+    color: #29457f;
+    width: 525px;
+}
+.modal-confirm .modal-content {
+    padding: 20px;
+    font-size: 16px;
+    border-radius: 5px;
+    border: none;
+}
+.modal-confirm .modal-header {
+    background: #47c9a2;
+    border-bottom: none;   
+    position: relative;
+    text-align: center;
+    margin: -20px -20px 0;
+    border-radius: 5px 5px 0 0;
+    padding: 35px;
+}
+.modal-confirm h4 {
+    text-align: center;
+    font-size: 36px;
+    margin: 10px 0;
+}
+.modal-confirm .form-control, .modal-confirm .btn {
+    min-height: 40px;
+    border-radius: 3px; 
+}
+.modal-confirm .close {
+    position: absolute;
+    top: 15px;
+    right: 15px;
+    color: #fff;
+    text-shadow: none;
+    opacity: 0.5;
+}
+.modal-confirm .close:hover {
+    opacity: 0.8;
+}
+.modal-confirm .icon-box {
+    color: #fff;		
+    width: 95px;
+    height: 95px;
+    display: inline-block;
+    border-radius: 50%;
+    z-index: 9;
+    border: 5px solid #fff;
+    padding: 15px;
+    text-align: center;
+}
+.modal-confirm .icon-box i {
+    font-size: 64px;
+    margin: -4px 0 0 -4px;
+}
+.modal-confirm.modal-dialog {
+    margin-top: 80px;
+}
+.modal-confirm .btn, .modal-confirm .btn:active {
+    color: #fff;
+    border-radius: 4px;
+    background: #eeb711 !important;
+    text-decoration: none;
+    transition: all 0.4s;
+    line-height: normal;
+    border-radius: 30px;
+    margin-top: 10px;
+    padding: 6px 20px;
+    border: none;
+}
+.modal-confirm .btn:hover, .modal-confirm .btn:focus {
+    background: #eda645 !important;
+    outline: none;
+}
+.modal-confirm .btn span {
+    margin: 1px 3px 0;
+    float: left;
+}
+.modal-confirm .btn i {
+    margin-left: 1px;
+    font-size: 20px;
+    float: right;
+}
+.trigger-btn {
+    display: inline-block;
+    margin: 100px auto;
+}
+
+.dt-buttons {
+  padding-top: 20px;
+}
+
+.dt-button {
+  background-color: DodgerBlue; /* Blue background */
+  border: none; /* Remove borders */
+  color: white; /* White text */
+  padding: 8px 10px; /* Some padding */
+  font-size: 14px; /* Set a font size */
+  cursor: pointer; /* Mouse pointer on hover */  
+}
+
+.dt-button:hover {
+  background-color: RoyalBlue;
+}
+
+#btn1 {
+  background-color: rgb(255, 56, 56); /* Blue background */
+  border: none; /* Remove borders */
+  color: white; /* White text */
+  padding: 8px 10px; /* Some padding */
+  font-size: 14px; /* Set a font size */
+  cursor: pointer; /* Mouse pointer on hover */
+  margin-left: 10px;
+  }
+  #btn2 {
+  background-color: rgb(0, 228, 19); /* Blue background */
+  border: none; /* Remove borders */
+  color: white; /* White text */
+  padding: 8px 10px; /* Some padding */
+  font-size: 14px; /* Set a font size */
+  cursor: pointer; /* Mouse pointer on hover */
+  margin-left: 10px;
+  }
+  #btn1:hover {
+      background-color: rgb(214, 0, 0);
+  }
+  #btn2:hover {
+      background-color: rgb(0, 180, 15);
+  }
