--- a/mysite/templates/pagos/pagos_solicitados_eliminar.html
+++ b/mysite/templates/pagos/pagos_solicitados_eliminar.html
@@ -1,177 +1,8 @@
-{% extends 'base.html' %}
-<head>
-    {% block scripts %}
-    <!-- <link rel="stylesheet" type="text/css" href="//cdn.datatables.net/1.10.24/css/jquery.dataTables.min.css" /> -->
-    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.24/css/dataTables.bootstrap5.min.css"/>
-    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css"/>
-    <!-- Add icon library -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <style>
-        .dtrg-group.dtrg-start.dtrg-level-0 td{
-            background-color: #353535;
-            color: white;
-        }
-        tr.dtrg-group.dtrg-start.dtrg-level-1 td {
-            padding-left: 1.5em;
-        }
-        tr.odd td:first-child,
-        tr.even td:first-child {
-            padding-left: 4em;
-        }
-        td.sub, tr.subCabecera td {
-            padding-left: 1.5em;
-        }
-        /* Style buttons */
-        #btn1 {
-        background-color: rgb(255, 56, 56); /* Blue background */
-        border: none; /* Remove borders */
-        color: white; /* White text */
-        padding: 8px 10px; /* Some padding */
-        font-size: 14px; /* Set a font size */
-        cursor: pointer; /* Mouse pointer on hover */
-        margin-left: 10px;
-        }
-        #btn2 {
-        background-color: rgb(0, 228, 19); /* Blue background */
-        border: none; /* Remove borders */
-        color: white; /* White text */
-        padding: 8px 10px; /* Some padding */
-        font-size: 14px; /* Set a font size */
-        cursor: pointer; /* Mouse pointer on hover */
-        margin-left: 10px;
-        }
-        #btn1:hover {
-            background-color: rgb(214, 0, 0);
-        }
-        #btn2:hover {
-            background-color: rgb(0, 180, 15);
-        }
-
-        /* Darker background on mouse-over */
-        .btn:hover {
-        background-color: RoyalBlue;
-        }
-        .modal-confirm {		
-            color: #434e65;
-            width: 525px;
-        }
-        .modal-confirm .modal-content {
-            padding: 20px;
-            font-size: 16px;
-            border-radius: 5px;
-            border: none;
-        }
-        .modal-confirm .modal-header1 {
-            background: #ff3b3b;
-            border-bottom: none;   
-            position: relative;
-            text-align: center;
-            margin: -20px -20px 0;
-            border-radius: 5px 5px 0 0;
-            padding: 35px;
-        }
-        .modal-confirm .modal-header2 {
-            background: #47c9a2;
-            border-bottom: none;   
-            position: relative;
-            text-align: center;
-            margin: -20px -20px 0;
-            border-radius: 5px 5px 0 0;
-            padding: 35px;
-        }
-        .modal-confirm h4 {
-            text-align: center;
-            font-size: 36px;
-            margin: 10px 0;
-        }
-        .modal-confirm .form-control, .modal-confirm .btn {
-            min-height: 40px;
-            border-radius: 3px; 
-        }
-        .modal-confirm .close {
-            position: absolute;
-            top: 15px;
-            right: 15px;
-            color: #fff;
-            text-shadow: none;
-            opacity: 0.5;
-        }
-        .modal-confirm .close:hover {
-            opacity: 0.8;
-        }
-        .modal-confirm .icon-box {
-            color: #fff;		
-            width: 95px;
-            height: 95px;
-            display: inline-block;
-            border-radius: 50%;
-            z-index: 9;
-            border: 5px solid #fff;
-            padding: 15px;
-            text-align: center;
-        }
-        .modal-confirm .icon-box i {
-            font-size: 64px;
-            margin: -4px 0 0 -4px;
-        }
-        .modal-confirm.modal-dialog {
-            margin-top: 80px;
-        }
-        .modal-confirm .btn, .modal-confirm .btn:active {
-            color: #fff;
-            border-radius: 4px;
-            background: #eeb711 !important;
-            text-decoration: none;
-            transition: all 0.4s;
-            line-height: normal;
-            border-radius: 30px;
-            margin-top: 10px;
-            padding: 6px 20px;
-            border: none;
-        }
-        .modal-confirm .btn:hover, .modal-confirm .btn:focus {
-            background: #eda645 !important;
-            outline: none;
-        }
-        .modal-confirm .btn span {
-            margin: 1px 3px 0;
-            float: left;
-        }
-        .modal-confirm .btn i {
-            margin-left: 1px;
-            font-size: 20px;
-            float: right;
-        }
-        .trigger-btn {
-            display: inline-block;
-            margin: 100px auto;
-        }
-    </style>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="//cdn.datatables.net/1.10.24/js/jquery.dataTables.min.js"></script>
-    <script src="https://cdn.datatables.net/1.10.24/js/dataTables.bootstrap5.min.js"></script>
-    <link type="text/css" href="https://cdn.datatables.net/rowgroup/1.1.2/css/rowGroup.dataTables.min.css"></link>
-    <script src="https://cdn.datatables.net/rowgroup/1.1.2/js/dataTables.rowGroup.min.js"></script>
-    <script src="https://cdn.datatables.net/fixedheader/3.1.8/js/dataTables.fixedHeader.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <!-- <script src="https://cdn.datatables.net/buttons/1.7.0/js/dataTables.buttons.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.1.3/jszip.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/pdfmake.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/vfs_fonts.js"></script>
-    <script src="https://cdn.datatables.net/buttons/1.7.0/js/buttons.print.min.js"></script>
-    <script src="https://cdn.datatables.net/buttons/1.7.0/js/buttons.html5.min.js"></script> -->
-    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script> -->
-    <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
-    {% endblock scripts %}
-</head>
+{% extends 'base_datatable.html' %}
 
 {% block content %}
 {% csrf_token %}
 <div style="margin-top: 20px;"></div>
-    <!-- <a href="http://127.0.0.1:8000/pagos/pagos_excel.xls" download>Descargar</a> -->
     <div style="width:90%" class="container">
         <div class="row justify-content-center">
             <div class="col">
@@ -299,11 +130,12 @@
                     },
                     dataSrc: 'data'
                 },
-                /* dom: 'Bfrtip',
-                buttons: ['csv', 'excel', 'pdf'], */
+                "sDom":"Bfrtip",
+                buttons: [
+                    'copy', 'csv', 'excel', 'pdf', 'print'
+                ],
                 scrollY: '70vh',
                 scrollCollapse: true,
-                "sDom":"ltipr",
                 language: {
                     url: '//cdn.datatables.net/plug-ins/1.10.24/i18n/Spanish.json'
                 },
