--- a/mysite/templates/usuarios/control.html
+++ b/mysite/templates/usuarios/control.html
@@ -1,55 +1,44 @@
-{% extends 'base.html' %}
-<head>
-    {% block scripts %}
-    <link rel="stylesheet" type="text/css" href="../../static/general/styles.css" />
-    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.24/css/dataTables.bootstrap5.min.css"/>
-    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css"/>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="//cdn.datatables.net/1.10.24/js/jquery.dataTables.min.js"></script>
-    <script src="https://cdn.datatables.net/1.10.24/js/dataTables.bootstrap5.min.js"></script>
-    <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
-    
-    {% endblock scripts %}
-</head>
+{% extends 'base_datatable.html' %}
 
 {% block content %}
 {% csrf_token %}
 <div style="margin-top: 20px;">
-    <div class="row justify-content-center">
-        <div class="col">
-            <label for="dt1">Fecha de ingreso inicial:</label>
-            <input type="search" id="dt1"></input>
+    <div style="width:90%; margin: 0 auto;">
+        <div class="row justify-content-center">
+            <div class="col">
+                <label for="dt1">Fecha de inicio:</label>
+                <input type="text" id="dt1"></input>
+            </div>
+            <div class="col">
+                <label for="dt2">Fecha final:</label>
+                <input type="text" id="dt2"></input>
+            </div>
+            <div class="col">
+                <label for="user_code">Codigo de Usuario:</label>
+                <input type="text" id="user_code">
+            </div>
+            <div class="col">
+            	<label for="user_name">Nombre de Usuario:</label>
+            	<input type="text" id="user_name">
+            </div>
         </div>
-        <div  class="col">
-            <label for="dt2">Fecha de ingreso final:</label>
-            <input type="search" id="dt2"></input>
-        </div>
-        <div  class="col">
-            <label for="user_code">Codigo de Usuario:</label>
-            <input type="search" id="user_code">
-        </div>
-        <div  class="col">
-            <label for="user_name">Nombre de Usuario:</label>
-            <input type="search" id="user_name">
-        </div>
+        <table id="table_user" class="table table-striped table-bordered table-hover" style="width:100%;">
+            <thead>
+                <tr>
+                    <th>Codigo</th>
+                    <th>Nombre</th>
+                    <th>Correo Electronico</th>
+                    <th>DPI</th>
+                    <th>Telefono</th>
+                    <th>Direccion</th>
+                    <th>Sexo</th>
+                    <th>Rol</th>
+                    <th>Edad</th>
+                    <th>Fecha de Ingreso</th>
+                </tr>
+            </thead>
+        </table>
     </div>
-    <table id="table_user" class="table table-light table-hover" style="width:100%">
-        <thead>
-            <tr>
-                <th>Codigo</th>
-                <th>Nombre</th>
-                <th>Correo Electronico</th>
-                <th>DPI</th>
-                <th>Telefono</th>
-                <th>Direccion</th>
-                <th>Sexo</th>
-                <th>Rol</th>
-                <th>Edad</th>
-                <th>Fecha de Ingreso</th>
-            </tr>
-        </thead>
-    </table>
 </div>
 <script type="text/javascript">
 
@@ -121,7 +110,10 @@
                     },
                     dataSrc: 'data',
                 },
-                "sDom":"ltipr",
+                "sDom":"Bfrtip",
+                buttons: [
+                    'copy', 'csv', 'excel', 'pdf', 'print'
+                ],
                 language: {
                     url: '//cdn.datatables.net/plug-ins/1.10.24/i18n/Spanish.json'
                 },
