--- a/mysite/templates/pagos/cobros_extra.html
+++ b/mysite/templates/pagos/cobros_extra.html
@@ -5,12 +5,11 @@
 <hr>
 
 <form action="" method="post">
-		<div class="form-container">
-			{% csrf_token %}
-			{{form_cobros_extra}}
-		</div>
-	<div class="btn-container">
-		<input class="btn btn-buscar" type="submit" value="Asignar cobro">
-	</div>
+	<h4 class="form-title">Ingresar Pago</h4>
+	{% csrf_token %}
+	{{form}}
+<div class="btn-container">
+<input class="btn btn-buscar" type="submit" value="Ingresar Pago">
+</div>
 </form>
 {% endblock content %}
