--- a/mysite/templates/pagos/cobros_extra.html
+++ b/mysite/templates/pagos/cobros_extra.html
@@ -1,15 +1,22 @@
+<head>
+    <link rel="stylesheet" type="text/css" href="../../../static/general/styles.css" />
+</head>
+
 {% extends 'base.html' %}
 
 {% block content %}
 <h1>Cobros Extra</h1>
 <hr>
 
-<form action="" method="post">
-	<h4 class="form-title">Ingresar Pago</h4>
-	{% csrf_token %}
-	{{form}}
-<div class="btn-container">
-<input class="btn btn-buscar" type="submit" value="Ingresar Pago">
+<div class="container">
+	<form action="" method="post">
+		<h4 class="form-title">Crear cobro extra</h4>
+				{% csrf_token %}
+				{{form_cobros_extra}}
+		<div class="btn-container">
+			<input class="btn btn-buscar" type="submit" value="Crear">
+		</div>
+	</form>
 </div>
 </form>
 {% endblock content %}
